objects/MWA1_Submission__c.object
<CustomObject>
    <description>A Submission record represents the header data for a reponse.  Answers are the child records to a submission.</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>R00N46000003QcqjEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>R00N46000003Qcr5EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Survey Submissions</relationshipLabel>
        <relationshipName>R00N46000003QcrKEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MWASurvey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>MWA1_Survey__c</referenceTo>
        <relationshipLabel>Survey Submission</relationshipLabel>
        <relationshipName>R00N46000003QcrIEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>R00N46000003QcrFEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission_Type__c</fullName>
        <formula>IF( Contact__c &lt;&gt;&quot;&quot;, &quot;Contact&quot;,if( Lead__c &lt;&gt;&quot;&quot;,&quot;Lead&quot;,&quot;Anonymous&quot;))</formula>
        <label>Submission Type</label>
        <type>Text</type>
    </fields>
    <label>Submission</label>
    <nameField>
        <displayFormat>S{0000000}</displayFormat>
        <label>Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>